--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <a href="productlist.html" class="custom-btn">Read More </a>
+              <a href="productlist.html?colour=red" class="custom-btn"
+                >Read More
+              </a>
             </div>
           </div>
         </div>
@@ -71,7 +73,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <a href="productlist.html" class="custom-btn">Read More</a>
+              <a href="productlist.html?colour=white" class="custom-btn"
+                >Read More</a
+              >
             </div>
           </div>
         </div>
@@ -88,7 +92,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <a href="productlist.html" class="custom-btn">Read More</a>
+              <a href="productlist.html?colour=rose" class="custom-btn"
+                >Read More</a
+              >
             </div>
           </div>
         </div>
