added intor text

--- a/index.html
+++ b/index.html
@@ -1,105 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Winers</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css" />
-  </head>
 
-  <header>
-    <nav>
-      <div class="logo"><a href="index.html">Wine</a></div>
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li>
-          <a href="productlist.html?colour=red">red</a>
-        </li>
-        <li><a href="productlist.html?colour=white">white </a></li>
-        <li><a href="productlist.html?colour=rose">rose</a></li>
-        <li><a href="about.html"> about </a></li>
-      </ul>
-    </nav>
-  </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Winers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css" />
+</head>
 
-  <body>
-    <main>
-      <h1 class="wineh1">A Wine Guide For The Youth</h1>
-      <p class="introtext">
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release
-        of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
-      </p>
-      <h2 class="categoryh2">Categories</h2>
+<header>
+  <nav>
+    <div class="logo"><a href="index.html">Wine</a></div>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li>
+        <a href="productlist.html?colour=red">red</a>
+      </li>
+      <li><a href="productlist.html?colour=white">white </a></li>
+      <li><a href="productlist.html?colour=rose">rose</a></li>
+      <li><a href="about.html"> about </a></li>
+    </ul>
+  </nav>
+</header>
 
-      <div class="container">
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/redwine_white.svg" />
-              <h3>Red Wine</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <a href="productlist.html?colour=red" class="custom-btn"
-                >Read More
-              </a>
-            </div>
+<body>
+  <main>
+    <h1 class="wineh1">A Wine Guide For The Youth</h1>
+    <p class="introtext">
+      Whether you're just getting started with wine or work in the industry, this page contains many useful resources
+      that will round out your wine knowledge. Let's get started!
+
+
+    </p>
+    <h2 class="categoryh2">Categories</h2>
+
+    <div class="container">
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/redwine_white.svg" />
+            <h3>Red Wine</h3>
           </div>
         </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/whitewine_white.svg" />
-              <h3>White Wine</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <a href="productlist.html?colour=white" class="custom-btn"
-                >Read More</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/sparkling.svg" />
-              <h3>Rose Wine</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <a href="productlist.html?colour=rose" class="custom-btn"
-                >Read More</a
-              >
-            </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <a href="productlist.html?colour=red" class="custom-btn">Read More
+            </a>
           </div>
         </div>
       </div>
-    </main>
-    <script src="productlist.js"></script>
-  </body>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/whitewine_white.svg" />
+            <h3>White Wine</h3>
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <a href="productlist.html?colour=white" class="custom-btn">Read More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/sparkling.svg" />
+            <h3>Rose Wine</h3>
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <a href="productlist.html?colour=rose" class="custom-btn">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <script src="productlist.js"></script>
+</body>
+
 </html>
